--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
   <packaging>jar</packaging>
   <name>ToHUtils</name>
   <url>http://maven.apache.org</url>
+  <scm>
+    <connection>scm:hg:</connection>
+  </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -38,6 +41,39 @@
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <version>1.0</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+	<version>2.3.2</version>
+        <configuration>
+          <archive>
+	    <manifest>
+              <mainClass>org.tyrannyofheaven.bukkit.util.VersionMain</mainClass>
+	      <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+	    </manifest>
+            <manifestEntries>
+	      <Implementation-Build>${buildNumber}</Implementation-Build>
+            </manifestEntries>
+          </archive>
         </configuration>
       </plugin>
     </plugins>
