--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <bukkit.version>1.9-pre5-R1-SNAPSHOT</bukkit.version>
   </properties>
   <!--
   <repositories>
@@ -25,7 +26,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>${bukkit.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
