--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bukkit.version>1.0.0-R1-SNAPSHOT</bukkit.version>
+    <bukkit.version>1.0.1-R1</bukkit.version>
   </properties>
   <!--
   <repositories>
