--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,18 @@
   <name>ToHPluginUtils</name>
   <url>http://maven.apache.org</url>
   <scm>
-    <connection>scm:hg:</connection>
+    <connection>scm:git:</connection>
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <bukkit.version>1.0.1-R1</bukkit.version>
   </properties>
-  <!--
   <repositories>
     <repository>
-      <id>bukkit-repo</id>
-      <url>http://repo.bukkit.org/artifactory/repo</url>
+      <id>bukkit-releases</id>
+      <url>http://repo.bukkit.org/content/repositories/releases</url>
     </repository>
   </repositories>
-  -->
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
