--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <bukkit.version>1.0.1-R1</bukkit.version>
   </properties>
-  <!--
   <repositories>
     <repository>
-      <id>bukkit-repo</id>
-      <url>http://repo.bukkit.org/artifactory/repo</url>
+      <id>bukkit-releases</id>
+      <url>http://repo.bukkit.org/content/repositories/releases</url>
     </repository>
   </repositories>
-  -->
   <dependencies>
     <dependency>
       <groupId>org.bukkit</groupId>
