--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <bukkit.version>1.1-R5-SNAPSHOT</bukkit.version>
+    <bukkit.version>1.1-R6</bukkit.version>
   </properties>
   <repositories>
     <repository>
